# git-repo-organizer

./: .gitignore  CLAUDE.md  Makefile  README.md  analyze_duplicates.py  analyze_repos.sh  categorization.json  continue_migration.sh  migrate_repos.sh  pyproject.toml  reorganization_plan.md  repo_analysis.csv
docs/plans/: 2026-01-23-config-driven-workspace-design.md  2026-01-25-adopt-symlinks-design.md  2026-01-25-adopt-symlinks.md
src/gro/: __init__.py  __main__.py  cli.py  config.py  models.py  vscode.py  workspace.py
tests/: __init__.py  test_cli.py  test_config.py  test_models.py  test_vscode.py  test_workspace.py
